# RuYi

./: .gitignore  CMakeLists.txt  Constant.cpp  Constant.h  README.md  constant.json  main.cpp  test.cpp  test.py
Mul_Triplets/: MT0_0.txt  MT0_1.txt  MT0_2.txt  MT0_3.txt  MT0_4.txt  MT0_5.txt  MT0_6.txt  MT1_0.txt  MT1_1.txt  MT1_2.txt  MT1_3.txt  MT1_4.txt  MT1_5.txt  MT1_6.txt  MT3_0.txt  MT3_1.txt  MT3_2.txt  MT3_3.txt  MT3_4.txt  MT3_5.txt  MT3_6.txt  MT4_0.txt  MT4_1.txt  MT4_2.txt  MT4_3.txt  MT4_4.txt  MT4_5.txt  MT4_6.txt  MT5_0.txt  MT5_1.txt  MT5_2.txt  MT5_3.txt  MT5_4.txt  MT5_5.txt  MT5_6.txt  MT7_0.txt  MT7_1.txt  MT7_2.txt  MT7_3.txt  MT7_4.txt  (+9 more)
config/: Config.cpp  Config.hpp
core/: Boolean_Share.cpp  Boolean_Share.h  FieldCmp.cpp  FieldCmp.h  Offline.cpp  Offline.h  Secret_Cmp.cpp  Secret_Cmp.h  Secret_Mul.cpp  Secret_Mul.h
ml/: linear.cpp  linear.h  logistic.cpp  logistic.h  nn.cpp  nn.h
python_ML/: linear.py  logistic.py  nn.py
share/: FieldShare.cpp  FieldShare.h
util/: IOManager.cpp  IOManager.h  Mat.cpp  Mat.h  Offline.cpp  Offline.h  SocketManager.cpp  SocketManager.h  SocketOnline.cpp  SocketOnline.h  SocketUtil.cpp  SocketUtil.h
